re PR tree-optimization/16864 (Segmentation fault during tree tail call elimination)

PR tree-optimization/16864
	* tree-tailcall.c (eliminate_tail_call): Do not create phi nodes
	for ssa names without default_def.

From-SVN: r85597